# ot-harjoitustyo

./: .gitignore  README.md  pyproject.toml  tasks.py
dokumentaatio/: arkkitehtuuri.md  kayttoohje.md  testaus.md  tyoaikaseuranta.md  vaatimurmaarittely.md  vaatimusmaarittely.md
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
src/: database_connection.py  index.py  initialize_database.py
src/entities/: recipe.py  user.py
src/repositories/: recipe_repository.py  user_repository.py
src/services/: service.py
src/tests/repositories/: recipe_repository_test.py  user_repository_test.py
src/tests/services/: service_test.py
src/ui/: ui.py
